# CNN

convolutional_neural_networks/: .gitignore  Makefile  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
convolutional_neural_networks/convolutional_neural_networks/: __init__.py  config.py  dataset.py  features.py  plots.py
convolutional_neural_networks/convolutional_neural_networks/modeling/: cnn_model.py  predict.py  train.py
convolutional_neural_networks/docs/: mkdocs.yml
convolutional_neural_networks/docs/docs/: index.md
convolutional_neural_networks/notebooks/: test1.ipynb
