[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "convolutional_neural_networks"
version = "0.0.1"
description = "Convolutional Neural Networks for Face and Object Detection"
authors = [
  { name = "David Yataco" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["convolutional_neural_networks"]
include = ["pyproject.toml", "convolutional_neural_networks/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["convolutional_neural_networks"]
force-sort-within-sections = true

